@startuml diagramme_classes_ensemble
!theme plain

' ============================================================
' CONFIGURATION GÉNÉRALE — palette de marque IAT Academy (navy/gold)
' ============================================================

skinparam dpi 300
skinparam shadowing false
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam linetype ortho

skinparam nodesep 20
skinparam ranksep 35

skinparam class {
    BackgroundColor White
    BorderColor #142B4B
    BorderThickness 1.2
    ArrowColor #142B4B
    ArrowThickness 1.3
    FontColor #142B4B
    FontStyle Bold
    AttributeFontColor #23282F
    AttributeFontStyle Normal
    AttributeFontSize 12
}

skinparam package {
    BackgroundColor #FFF8EC
    BorderColor #C97612
    BorderThickness 1.4
    FontColor #142B4B
    FontStyle Bold
    FontSize 13
}

skinparam title {
    FontColor #142B4B
    FontSize 20
    FontStyle Bold
}

title Diagramme de classes — Vue d'ensemble simplifiée (IAT Academy)

' ============================================================
' CLASSE TECHNIQUE
' ============================================================

abstract class AuditableEntity {
  # createdAt : Instant
  # updatedAt : Instant
}

' ============================================================
' PAQUETAGES FONCTIONNELS (1 à 3 classes représentatives chacun)
' ============================================================

package "Utilisateurs & Groupes (3)" as PKG_USERS {
  class User {
    - id : UUID
    - fullName : String
    - role : Role
  }
  class LearnerGroup {
    - id : UUID
    - name : String
  }
}

package "Contenu pédagogique (6)" as PKG_CONTENU {
  class Formation {
    - id : UUID
    - title : String
  }
  class ModuleEntity {
    - id : UUID
    - title : String
  }
  class Lesson {
    - id : UUID
    - title : String
  }
}

package "Évaluation (9)" as PKG_EVAL {
  class Quiz {
    - id : UUID
    - title : String
    - quizType : QuizType
  }
  class QuizAttempt {
    - id : UUID
    - score : BigDecimal
    - status : AttemptStatus
  }
}

package "Stage & Certification (4)" as PKG_STAGE {
  class LearnerUfValidation {
    - id : UUID
    - ufCode : String
    - validated : boolean
  }
  class Certificate {
    - id : UUID
    - verificationCode : String
  }
}

package "Communication (5)" as PKG_COMM {
  class Conversation {
    - id : UUID
    - type : ConversationType
  }
  class Notification {
    - id : UUID
    - title : String
  }
}

package "Marketing & Emploi (5)" as PKG_MARKETING {
  class EmailCampaign {
    - id : UUID
    - subject : String
  }
  class JobOffer {
    - id : UUID
    - title : String
  }
}

package "Médias (3)" as PKG_MEDIAS {
  class Asset {
    - id : UUID
    - filename : String
  }
}

package "Système (4)" as PKG_SYSTEME {
  class AuditLogEntry {
    - id : UUID
    - action : String
  }
}

' ============================================================
' DISPOSITION EN GRILLE — sans rapport avec le modèle métier
' ============================================================

PKG_USERS -[hidden]right- PKG_CONTENU
PKG_CONTENU -[hidden]right- PKG_EVAL
PKG_USERS -[hidden]down- PKG_STAGE
PKG_STAGE -[hidden]right- PKG_COMM
PKG_COMM -[hidden]right- PKG_MARKETING
PKG_STAGE -[hidden]down- PKG_MEDIAS
PKG_MEDIAS -[hidden]right- PKG_SYSTEME

' ============================================================
' HÉRITAGE TECHNIQUE
' ============================================================

AuditableEntity <|-- User
AuditableEntity <|-- LearnerGroup
AuditableEntity <|-- Formation
AuditableEntity <|-- ModuleEntity
AuditableEntity <|-- Lesson
AuditableEntity <|-- Quiz
AuditableEntity <|-- QuizAttempt
AuditableEntity <|-- LearnerUfValidation
AuditableEntity <|-- Certificate
AuditableEntity <|-- Conversation
AuditableEntity <|-- Notification
AuditableEntity <|-- EmailCampaign
AuditableEntity <|-- JobOffer
AuditableEntity <|-- Asset
AuditableEntity <|-- AuditLogEntry

' ============================================================
' RELATIONS PRINCIPALES ENTRE PAQUETAGES
' ============================================================

User "0..N" -- "0..1" LearnerGroup

Formation "1" *-- "0..N" ModuleEntity
ModuleEntity "1" *-- "0..N" Lesson

Lesson "0..1" -- "0..N" Quiz
User -- "0..N" QuizAttempt
Quiz "1" -- "0..N" QuizAttempt

User -- "0..N" LearnerUfValidation
User -- "0..N" Certificate
Formation "1" -- "0..N" Certificate

LearnerGroup "0..1" -- "0..N" Conversation
User -- "0..N" Notification : reçoit

LearnerGroup "0..1" -- "0..N" EmailCampaign
JobOffer ..> Certificate : vérifie l'éligibilité

User ..> Asset : consulte / télécharge

User "0..1" -- "0..N" AuditLogEntry

@enduml
